--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Charanesh Raj's Profile</title>
-    <link rel="stylesheet" href="https://unpkg.com/tailwindcss/dist/tailwind.min.css">
+    <link rel="stylesheet" href="https://cdn.tailwindcss.com">
 </head>
 <body class="font-sans antialiased text-gray-100 leading-normal tracking-wider bg-cover" style="background-image: url('background.jpg')">
 
